Bug 27511: Add new identity button to toolbar
Also added 'New circuit for this site' button to CustomizableUI, but
not visible by default.

--- a/browser/themes/shared/menupanel.inc.css
+++ b/browser/themes/shared/menupanel.inc.css
@@ -195,3 +195,11 @@ toolbarpaletteitem[place="palette"] > #bookmarks-menu-button,
   list-style-image: url(chrome://browser/skin/fullscreen-exit.svg);
 }
 } /** END Proton **/
+
+#appMenuNewIdentity {
+  list-style-image: url("chrome://browser/skin/new_identity.svg");
+}
+
+#appMenuNewCircuit {
+  list-style-image: url("chrome://browser/skin/new_circuit.svg");
+}
